[tool.poetry]
name = "cron-parser"
version = "0.1.0"
description = ""
authors = ["theNullP0inter <nikhilallamsetti@gmail.com>"]


[tool.poetry.scripts]
describe = "cron_parser.scripts:describe"

[tool.poetry.dependencies]
python = "^3.8"
argparse = "^1.4.0"
pytest-mock = "^3.7.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

